--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Uden AI</title>
+<meta name="description" content="KI Entwicklung und andere Zukunftstechnologien. Eine Marke von Uden UG (haftungsbeschränkt)"/>
 </head>
 <body>
 
